static/css/style.css
body {
    font-size: 1.2em;
    font-family: 'Droid Sans', sans-serif;
    margin: 0px;
    padding: 0px;
}

hr {
    color: purple; /* green; */ /* orange; */
}

#nav {
    border-bottom-style: solid;
    border-bottom-width: 2px;
    border-bottom-color: purple; /* green; */ /* orange; */
    background-color: white;
    width: 100%;
    z-index: 2;
}

#content {
    width: 75%;
    margin-left: auto;
    margin-right: auto;
}

@media (min-height: 750px) {
    #nav {
        position: fixed;
        top: 0;
        left: 0;
    }

    #wrap {
        height: 5em;
    }
}

pre {
    max-height: 300px;
    overflow: scroll;
    font-size: 0.9em;
    padding: 10px;
    margin: 1em;
    border: 2px solid purple; /* green; */ /* orange; */
    border-radius: 10px;
}

.ascii {
    font-size: 0.7em;
    line-height: 1;
    max-height: max-content;
    overflow-y: auto;
    font-weight: bold;
    width: max-content;
}

.textwrap {
    display: flex;
    justify-content: space-around;
    align-items: center;
    flex-wrap: wrap;
}

.listdesc {
    font-size: 0.75em;
    vertical-align: top;
}

.show-comments {
    background: none;
    border: none;
    font: inherit;
    cursor: pointer;
    border-bottom: 1px solid blue;
    color: blue;
}

.releasecard {
    border: 2px solid purple;
    width: max-content;
    padding: 0.6em 1em 0em 1em;
    border-radius: 10px;
    background-color: lightgray;
    text-align: center;
    margin: auto;
}

#home {
    font-size: 2.5em;
    margin-right: 0.5em;
}

#nav ul {
    list-style-type: none;
}

#nav ul li {
    display: inline;
    margin-right: 0.5em;
}

#nav a:link {
    color: black;
    font-weight: bold;
    text-decoration: none;
}

#nav a:visited {
    color: black;
    font-weight: bold;
    text-decoration: none;
}

#footer {
    color: gray;
    text-align: center;
    margin-top: 1em;
    font-size: small;
}

#footer a:link {
    color: gray;
}

#footer a:visited {
    color: gray;
}

#index-avatar {
    width: 150px;
    height: 150px;
    float: right;
    border: 2px, solid, #000000;
    border-radius: 10px;
    background-image: url(https://www.gravatar.com/avatar/8d18fec40a74782052fb4c007d212475?s=150);
    margin-left: 2em;
    margin-bottom: 1em;
}

#index-twitter-page {
    width: 100%;
    margin-left: auto;
    margin-right: auto;
}

iframe[id^='twitter-widget-'] {
    width: 100%;
}

div.fonts {
    display: inline;
    margin-top: 20px;
    margin-left: 23px;
}

span.font-big {
    font-size: 0.9em;
}

span.font-small {
    font-size: 0.6em;
}

.lightgallery {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    flex-wrap: wrap;
}

.border {
    overflow: hidden;
    height: max-content;
    display: inline-block;
    border-radius: 10px;
    vertical-align: middle;
    margin: 3px 0 3px 0;
    border: 2px solid purple; /* green; */ /* orange; */
}

.border .pic {
    transition: transform 0.1s;
    vertical-align: bottom;
}

.border:hover .pic {
    transform: scale(1.1, 1.1);
    filter: brightness(75%);
}

